@@ -33,6 +33,7 @@ Horst Gassner                   bug reports and suggestions
 Stuart D. Gathman               bug reports and suggestions
 Joel Gould                      bug reports
 greep                           bug reports
+Raymond Hettinger               suggestions
 Tim Hochberg                    bug reports
 Ben Hutchings                   bug reports
 Brad Knotwell                   bug reports
